Update and rename 开源网络爬虫.md to 开源网络爬虫相关.md

--- a/开源网络爬虫相关.md
+++ b/开源网络爬虫相关.md
@@ -31,3 +31,8 @@ Python 编写的快速高水平的开源网络爬虫框架
 https://github.com/jhy/jsoup
 Java HTML 解析器，使用 CSS、jQuery 类似的选择器
 官网 https://jsoup.org/
+
+## symfony/dom-crawler & symfony/css-selector
+编程语言 PHP
+Symfony 的组件，使用 CSS、XPath 选择器
+官网 https://github.com/symfony/dom-crawler https://github.com/symfony/css-selector
